--- a/rsbc-ride-kafka-mockproducer/src/main/docker/Dockerfile.mvn
+++ b/rsbc-ride-kafka-mockproducer/src/main/docker/Dockerfile.mvn
@@ -34,5 +34,5 @@ RUN chmod 775 /work /work/application \
 EXPOSE 8080
 USER 1001
 
-CMD ["./application", "-Dquarkus.http.host=0.0.0.0"]
-# CMD ["java", "-jar", "./application"]
+# CMD ["./application", "-Dquarkus.http.host=0.0.0.0"]
+CMD ["java", "-jar", "./application"]
