--- a/rsbc-ride-kafka-mockconsumer/src/main/docker/Dockerfile.mvn
+++ b/rsbc-ride-kafka-mockconsumer/src/main/docker/Dockerfile.mvn
@@ -1,4 +1,3 @@
-@ -1,37 +0,0 @@
 ## Stage 1 : build with maven builder image with native capabilities
 FROM quay.io/quarkus/centos-quarkus-maven:21.3.0-java11 AS build
 RUN [ "pwd" ]
@@ -13,7 +12,7 @@ RUN [ "echo" , "src copied" ]
 USER root
 RUN chown -R quarkus /usr/src/app
 USER quarkus
-RUN mvn -f /usr/src/app/pom.xml clean package
+RUN mvn -f /usr/src/app/pom.xml clean package -Dquarkus.package.type=uber-jar
 RUN [ "echo" , "mvn build done" ]
 
 
