--- a/rsbc-ride-kafka-mockconsumer/src/main/docker/Dockerfile.mvn
+++ b/rsbc-ride-kafka-mockconsumer/src/main/docker/Dockerfile.mvn
@@ -12,14 +12,14 @@ RUN [ "echo" , "src copied" ]
 USER root
 RUN chown -R quarkus /usr/src/app
 USER quarkus
-RUN mvn -f /usr/src/app/pom.xml clean package -Dquarkus.package.type=uber-jar
+RUN mvn -f /usr/src/app/pom.xml clean package -Dquarkus.package.type=fast-jar
 RUN [ "echo" , "mvn build done" ]
 
 
 ## Stage 2 : create the docker final image
 FROM registry.access.redhat.com/ubi8/ubi-minimal
 WORKDIR /work/
-COPY --from=build /usr/src/app/target/*-runner /work/application 
+COPY --from=build /usr/src/app/target/*-runner.jar /work/application 
 
 # set up permissions for user `1001`
 RUN chmod 775 /work /work/application \
