--- a/rsbc-ride-kafka-mockconsumer/src/main/docker/Dockerfile.mvn
+++ b/rsbc-ride-kafka-mockconsumer/src/main/docker/Dockerfile.mvn
@@ -13,6 +13,8 @@ USER root
 RUN chown -R quarkus /usr/src/app
 USER quarkus
 RUN mvn -f /usr/src/app/pom.xml clean package -Dquarkus.package.type=fast-jar
+RUN [ "pwd" ]
+RUN [ "ls", "-R" ]
 RUN [ "echo" , "mvn build done" ]
 
 
