mvn build using fast-jar working version

--- a/rsbc-ride-kafka-mockproducer/src/main/docker/Dockerfile.mvn
+++ b/rsbc-ride-kafka-mockproducer/src/main/docker/Dockerfile.mvn
@@ -13,13 +13,13 @@ USER root
 RUN chown -R quarkus /usr/src/app
 USER quarkus
 RUN mvn -f /usr/src/app/pom.xml clean package -Dquarkus.package.type=fast-jar
+RUN ls /usr/src/app/target
 RUN [ "echo" , "mvn build done" ]
-
 
 ## Stage 2 : create the docker final image
 FROM registry.access.redhat.com/ubi8/ubi-minimal
 WORKDIR /work/
-COPY --from=build /usr/src/app/target/*-runner.jar /work/application
+COPY --from=build /usr/src/app/target/*.jar /work/application
 
 # set up permissions for user `1001`
 RUN chmod 775 /work /work/application \
