--- a/tekton/pipeline/tekton-pipeline-cleanup-ride.yaml
+++ b/tekton/pipeline/tekton-pipeline-cleanup-ride.yaml
@@ -8,8 +8,14 @@ spec:
     type: string
     description: the PR number
     default: ""
-  - name: namespace
-    description: Namespace to cleanup to in the target cluster
+  - name: namespace-build
+    type: string
+    description: Namespace for pipeline build 
+    default: "be5301-tools"
+  - name: namespace-deployment
+    type: string
+    description: Namespace for deployment
+    default: "be5301-tools"
   - name: keep
     description: Amount of old resources to keep
     default: "2"
@@ -46,7 +52,7 @@ spec:
           exit 0
         fi
 
-        tkn pr delete -p $(params.build-pipeline-name) -n $(params.namespace) --keep $(params.keep)
+        tkn pr delete -p $(params.build-pipeline-name) -n $(params.namespace-build) --keep $(params.keep)
   - name: delete-cleanup-pipelinerun-instance
     taskRef:
       name: tkn
@@ -72,6 +78,45 @@ spec:
           exit 0
         fi
 
-        tkn pr delete -p $(params.cleanup-pipeline-name) -n $(params.namespace) --keep $(params.keep)
+        tkn pr delete -p $(params.cleanup-pipeline-name) -n $(params.namespace-build) --keep $(params.keep)
     runAfter:
     - delete-build-pipelinerun-instance
+  - name: delete-pr-instance
+    taskRef:
+      name: openshift-client-v0-22-0
+      kind: ClusterTask
+    params:
+    - name: SCRIPT
+      value: |
+        #!/bin/bash
+        set -ex
+        
+        # delete deployments    
+        echo 'Delete deployments for $(params.pr-number) environment in $(params.namespace-deployment) namespace'
+        oc delete deployment -n $(params.namespace-deployment) --selector='app=rsbc-ride-$(params.pr-number)'
+
+        # delete services
+        echo 'Delete services for $(params.pr-number) environment in $(params.namespace-deployment) namespace'
+        oc delete service -n $(params.namespace-deployment) --selector='app=rsbc-ride-$(params.pr-number)'
+
+        # delete statefulset
+        echo 'Delete statefulset for $(params.pr-number) environment in $(params.namespace-deployment) namespace'
+        oc delete statefulset -n $(params.namespace-deployment) --selector='app=rsbc-ride-$(params.pr-number)' 
+
+        # delete pvc
+        echo 'Delete pvc for $(params.pr-number) environment in $(params.namespace-deployment) namespace'
+        oc delete pvc -n $(params.namespace-deployment) --selector='app=rsbc-ride-$(params.pr-number)' 
+
+        # delete route
+        echo 'Delete route for $(params.pr-number) environment in $(params.namespace-deployment) namespace'
+        oc delete route -n $(params.namespace-deployment) --selector='app=rsbc-ride-$(params.pr-number)' 
+
+        # delete deployment configs    
+        echo 'Delete deployments for $(params.pr-number) environment in $(params.namespace-deployment) namespace'
+        oc delete dc -n $(params.namespace-deployment) --selector='app=rsbc-ride-$(params.pr-number)'
+
+        # delete configmap
+        echo 'Delete configmap for $(params.pr-number) environment in $(params.namespace-deployment) namespace'
+        oc delete configmap -n $(params.namespace-deployment) --selector='app=rsbc-ride-$(params.pr-number)' 
+    runAfter:
+    - delete-cleanup-pipelinerun-instance
