--- a/rsbc-ride-kafka-evteventproducer/src/main/resources/application.properties
+++ b/rsbc-ride-kafka-evteventproducer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-kafka.bootstrap.servers=${KAFKA_SERVER}
+kafka.bootstrap.servers=${KAFKA-SERVER}:9092
 
 mp.messaging.connector.smallrye-kafka.apicurio.registry.url=http://apicurio-registry-5115cc-dev.apps.silver.devops.gov.bc.ca/api
 
