updated kafka env

--- a/rsbc-ride-producer-api/src/main/resources/application.properties
+++ b/rsbc-ride-producer-api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 # Kafka general parameters
-kafka.bootstrap.servers=${KAFKA_SERVER}
-kafka.security.protocol=${KAFKA_SEC_PROTOCOL}
-kafka.sasl.mechanism=${KAFKA_SASL_MECH}
-kafka.sasl.jaas.config=${KAFKA_SASL_CONFIG};
-kafka.schema.registry.url=${KAFKA_SCHEMA_REGISTRY}
+#kafka.bootstrap.servers=${KAFKA_SERVER}
+#kafka.security.protocol=${KAFKA_SEC_PROTOCOL}
+#kafka.sasl.mechanism=${KAFKA_SASL_MECH}
+#kafka.sasl.jaas.config=${KAFKA_SASL_CONFIG};
+#kafka.schema.registry.url=${KAFKA_SCHEMA_REGISTRY}
