--- a/rsbc-ride-producer-api/src/main/resources/application.properties
+++ b/rsbc-ride-producer-api/src/main/resources/application.properties
@@ -5,3 +5,20 @@
 #kafka.sasl.mechanism=${KAFKA_SASL_MECH}
 #kafka.sasl.jaas.config=${KAFKA_SASL_CONFIG};
 #kafka.schema.registry.url=${KAFKA_SCHEMA_REGISTRY}
+
+
+# Configuring Test event channel
+
+mp.messaging.outgoing.outgoing-testevent.connector=${KAFKA_SCHEMA_REGISTRY}
+mp.messaging.outgoing.outgoing-testevent.topic=${KAFKA_SCHEMA_REGISTRY}
+mp.messaging.outgoing.outgoing-testevent.value.serializer=${KAFKA_SCHEMA_REGISTRY}
+mp.messaging.outgoing.outgoing-testevent.apicurio.registry.artifact-id=${KAFKA_SCHEMA_REGISTRY}
+mp.messaging.outgoing.outgoing-testevent.apicurio.registry.global-id=${KAFKA_SCHEMA_REGISTRY}
+mp.messaging.outgoing.outgoing-testevent.apicurio.registry.avro-datum-provider=${KAFKA_SCHEMA_REGISTRY}
+mp.messaging.connector.smallrye-kafka.apicurio.registry.url=${KAFKA_SCHEMA_REGISTRY}
+mp.messaging.outgoing.outgoing-testevent.ssl.protocol=${KAFKA_SCHEMA_REGISTRY}
+mp.messaging.outgoing.outgoing-testevent.ssl.truststore.location=${KAFKA_SCHEMA_REGISTRY}
+mp.messaging.outgoing.outgoing-testevent.ssl.truststore.password=${KAFKA_SCHEMA_REGISTRY}
+mp.messaging.outgoing.outgoing-testevent.ssl.truststore.type=${KAFKA_SCHEMA_REGISTRY}
+mp.messaging.outgoing.outgoing-testevent.specific.avro.reader=true
+mp.messaging.outgoing.outgoing-testevent.apicurio.registry.auto-register=true
