upated build settings with Quarkus image props

--- a/rsbc-ride-producer-api/src/main/resources/application.properties
+++ b/rsbc-ride-producer-api/src/main/resources/application.properties
@@ -1,4 +1,13 @@
 
+
+
+quarkus.container-image.registry=${IMAGE_REGISTRY}
+quarkus.container-image.group=${IMAGE_NAMESPACE}
+quarkus.container-image.name=${IMAGE_NAME}
+quarkus.container-image.tag=${IMAGE_TAG}
+
+
+
 # Kafka general parameters
 kafka.bootstrap.servers=${KAFKA_SERVER}
 kafka.security.protocol=${KAFKA_SEC_PROTOCOL}
