--- a/rsbc-ride-producer-api/src/main/resources/application.properties
+++ b/rsbc-ride-producer-api/src/main/resources/application.properties
@@ -18,7 +18,7 @@ kafka.schema.registry.url=${KAFKA_SCHEMA_REGISTRY}
 
 # Configuring Test event channel
 
-mp.messaging.outgoing.outgoing-testevent.connector=${CONNECTOR_NAME}
+mp.messaging.outgoing.outgoing-testevent.connector=smallrye-kafka
 mp.messaging.outgoing.outgoing-testevent.topic=${TEST_EVENT_TOPIC}
 mp.messaging.outgoing.outgoing-testevent.value.serializer=io.apicurio.registry.utils.serde.AvroKafkaSerializer
 mp.messaging.outgoing.outgoing-testevent.apicurio.registry.artifact-id=io.apicurio.registry.utils.serde.strategy.SimpleTopicIdStrategy
@@ -37,7 +37,7 @@ mp.messaging.outgoing.outgoing-testevent.apicurio.registry.auto-register=true
 
 # Configuring app_accepted event channel
 
-mp.messaging.outgoing.outgoing-appaccepted.connector=${CONNECTOR_NAME}
+mp.messaging.outgoing.outgoing-appaccepted.connector=smallrye-kafka
 mp.messaging.outgoing.outgoing-appaccepted.topic=${APP_ACCEPTED_EVENT_TOPIC}
 mp.messaging.outgoing.outgoing-appaccepted.value.serializer=io.apicurio.registry.utils.serde.AvroKafkaSerializer
 mp.messaging.outgoing.outgoing-appaccepted.apicurio.registry.artifact-id=io.apicurio.registry.utils.serde.strategy.SimpleTopicIdStrategy
@@ -54,7 +54,7 @@ mp.messaging.outgoing.outgoing-appaccepted.apicurio.registry.auto-register=true
 
 # Configuring disclosure_sent event channel
 
-mp.messaging.outgoing.outgoing-disclosuresent.connector=${CONNECTOR_NAME}
+mp.messaging.outgoing.outgoing-disclosuresent.connector=smallrye-kafka
 mp.messaging.outgoing.outgoing-disclosuresent.topic=${DISCLOSURE_EVENT_TOPIC}
 mp.messaging.outgoing.outgoing-disclosuresent.value.serializer=io.apicurio.registry.utils.serde.AvroKafkaSerializer
 mp.messaging.outgoing.outgoing-disclosuresent.apicurio.registry.artifact-id=io.apicurio.registry.utils.serde.strategy.SimpleTopicIdStrategy
@@ -71,7 +71,7 @@ mp.messaging.outgoing.outgoing-disclosuresent.apicurio.registry.auto-register=tr
 
 # Configuring evidence_submitted event channel
 
-mp.messaging.outgoing.outgoing-evidencesubmit.connector=${CONNECTOR_NAME}
+mp.messaging.outgoing.outgoing-evidencesubmit.connector=smallrye-kafka
 mp.messaging.outgoing.outgoing-evidencesubmit.topic=${EVSUBMITTED_EVENT_TOPIC}
 mp.messaging.outgoing.outgoing-evidencesubmit.value.serializer=io.apicurio.registry.utils.serde.AvroKafkaSerializer
 mp.messaging.outgoing.outgoing-evidencesubmit.apicurio.registry.artifact-id=io.apicurio.registry.utils.serde.strategy.SimpleTopicIdStrategy
@@ -88,7 +88,7 @@ mp.messaging.outgoing.outgoing-evidencesubmit.apicurio.registry.auto-register=tr
 
 # Configuring payment_received event channel
 
-mp.messaging.outgoing.outgoing-payreceived.connector=${CONNECTOR_NAME}
+mp.messaging.outgoing.outgoing-payreceived.connector=smallrye-kafka
 mp.messaging.outgoing.outgoing-payreceived.topic=${PAYRECVD_EVENT_TOPIC}
 mp.messaging.outgoing.outgoing-payreceived.value.serializer=io.apicurio.registry.utils.serde.AvroKafkaSerializer
 mp.messaging.outgoing.outgoing-payreceived.apicurio.registry.artifact-id=io.apicurio.registry.utils.serde.strategy.SimpleTopicIdStrategy
@@ -104,7 +104,7 @@ mp.messaging.outgoing.outgoing-payreceived.apicurio.registry.auto-register=true
 
 # Configuring review_scheduled event channel
 
-mp.messaging.outgoing.outgoing-reviewscheduled.connector=${CONNECTOR_NAME}
+mp.messaging.outgoing.outgoing-reviewscheduled.connector=smallrye-kafka
 mp.messaging.outgoing.outgoing-reviewscheduled.topic=${REVSCHED_EVENT_TOPIC}
 mp.messaging.outgoing.outgoing-reviewscheduled.value.serializer=io.apicurio.registry.utils.serde.AvroKafkaSerializer
 mp.messaging.outgoing.outgoing-reviewscheduled.apicurio.registry.artifact-id=io.apicurio.registry.utils.serde.strategy.SimpleTopicIdStrategy
