--- a/rsbc-ride-producer-api/openshift/producer-api-secret.yml
+++ b/rsbc-ride-producer-api/openshift/producer-api-secret.yml
@@ -49,6 +49,7 @@ parameters:
     value: producer-api
   - name: VERSION
     value: pr
+  - name: NAMESPACE
   - name: APP_ACCEPTED_EVENT_TOPIC
     value: ${APP_ACCEPTED_EVENT_TOPIC}
   - name: DISCLOSURE_EVENT_TOPIC
