--- a/rsbc-ride-producer-api/.dockerignore
+++ b/rsbc-ride-producer-api/.dockerignore
@@ -1,7 +1,8 @@
-*
-!build/*-runner
-!build/*-runner.jar
-!build/lib/*
-!build/quarkus-app/*
+# *
+# !build/*-runner
+# !build/*-runner.jar
+# !build/lib/*
+# !build/quarkus-app/*
+# !src
 
 .run
