--- a/rsbc-ride-producer-api/openshift/producer-api-build-params.yml
+++ b/rsbc-ride-producer-api/openshift/producer-api-build-params.yml
@@ -1,5 +1,5 @@
 NAME: ride
-VERSION: 1.0
+VERSION: "1.0"
 SOURCE_REPOSITORY_REF: "feature/producerapi-deployv1"
 BUILD_CONFIG_SUFFIX: pr
 COMPONENT: "producer-api"
