--- a/rsbc-ride-producer-api/Dockerfile.native.multistage
+++ b/rsbc-ride-producer-api/Dockerfile.native.multistage
@@ -7,6 +7,7 @@ COPY --chown=quarkus:quarkus ./gradle /code/gradle
 COPY --chown=quarkus:quarkus ./build.gradle /code/
 COPY --chown=quarkus:quarkus ./settings.gradle /code/
 COPY --chown=quarkus:quarkus ./gradle.properties /code/
+RUN chmod +x /code/gradlew
 USER quarkus
 # RUN mkdir /code
 WORKDIR /code
