--- a/rsbc-ride-producer-api/src/main/resources/application.properties
+++ b/rsbc-ride-producer-api/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 
 
 
-quarkus.container-image.registry=${IMAGE_REGISTRY}
-quarkus.container-image.group=${IMAGE_NAMESPACE}
-quarkus.container-image.name=${IMAGE_NAME}
-quarkus.container-image.tag=${IMAGE_TAG}
+# quarkus.container-image.registry=${IMAGE_REGISTRY}
+# quarkus.container-image.group=${IMAGE_NAMESPACE}
+# quarkus.container-image.name=${IMAGE_NAME}
+# quarkus.container-image.tag=${IMAGE_TAG}
 
 
 
