--- a/rsbc-ride-producer-api/Dockerfile.native.multistage
+++ b/rsbc-ride-producer-api/Dockerfile.native.multistage
@@ -10,24 +10,26 @@ COPY --chown=quarkus:quarkus ./gradle.properties /code/
 RUN chmod +x /code/gradlew
 USER quarkus
 # RUN mkdir /code
+RUN ls -a
 WORKDIR /code
 COPY ./src /code/src
 RUN ls /code/src
 RUN ls -a
-RUN env
-RUN ./gradlew build -Dquarkus.package.type=native
+RUN cp ./ca.p12 /tmp/ca.p12
+RUN ls /tmp
+# RUN ./gradlew build -Dquarkus.package.type=native
 
 
 
-## Stage 2 : create the docker final image
-FROM image-registry.openshift-image-registry.svc:5000/be5301-tools/quarkus-ubi-base-image:1.0
-WORKDIR /work/
-RUN chown 1001 /work \
-    && chmod "g+rwX" /work \
-    && chown 1001:root /work
-COPY --from=build --chown=1001:root build/*-runner /work/application
+# ## Stage 2 : create the docker final image
+# FROM image-registry.openshift-image-registry.svc:5000/be5301-tools/quarkus-ubi-base-image:1.0
+# WORKDIR /work/
+# RUN chown 1001 /work \
+#     && chmod "g+rwX" /work \
+#     && chown 1001:root /work
+# COPY --from=build --chown=1001:root build/*-runner /work/application
 
-EXPOSE 8080
-USER 1001
+# EXPOSE 8080
+# USER 1001
 
-CMD ["./application", "-Dquarkus.http.host=0.0.0.0"]
+# CMD ["./application", "-Dquarkus.http.host=0.0.0.0"]
