--- a/rsbc-ride-producer-api/openshift/producer-api-build.yml
+++ b/rsbc-ride-producer-api/openshift/producer-api-build.yml
@@ -25,6 +25,9 @@ objects:
       source:
         type: Git
         contextDir: ${SOURCE_CONTEXT_DIR}
+        secrets:
+          - secret:
+            name: rsbc-ride-redhat-kafka-dev-cluster-ca-cert
         git:
           uri: ${SOURCE_REPOSITORY_URL}
           ref: ${SOURCE_REPOSITORY_REF}
