--- a/rsbc-ride-producer-api/Dockerfile.native.multistage
+++ b/rsbc-ride-producer-api/Dockerfile.native.multistage
@@ -13,9 +13,10 @@ USER quarkus
 RUN ls -a
 WORKDIR /code
 COPY ./src /code/src
+COPY /tmp/ca.p12 /tmp/ca.p12
 RUN ls /code/src
 RUN ls -a
-RUN cp ./ca.p12 /tmp/ca.p12
+# RUN cp ./ca.p12 /tmp/ca.p12
 RUN ls /tmp
 # RUN ./gradlew build -Dquarkus.package.type=native
 
