--- a/rsbc-ride-producer-api/Dockerfile.native.multistage
+++ b/rsbc-ride-producer-api/Dockerfile.native.multistage
@@ -7,18 +7,21 @@ COPY --chown=quarkus:quarkus ./gradle /code/gradle
 COPY --chown=quarkus:quarkus ./build.gradle /code/
 COPY --chown=quarkus:quarkus ./settings.gradle /code/
 COPY --chown=quarkus:quarkus ./gradle.properties /code/
+COPY --chown=quarkus:quarkus ./gradle.properties /code/
+COPY --chown=quarkus:quarkus /tmp/ca.p12 /code/
 RUN chmod +x /code/gradlew
 USER quarkus
 # RUN mkdir /code
-RUN ls -a
+# RUN ls -a
 WORKDIR /code
 COPY ./src /code/src
-COPY /tmp/ca.p12 /tmp/ca.p12
-COPY /tmp/user.p12 /tmp/user.p12
-RUN ls /code/src
-RUN ls -a
+# COPY /tmp/ca.p12 /tmp/ca.p12
+# COPY /tmp/user.p12 /tmp/user.p12
+# RUN ls /code/src
+RUN ls /code
+# RUN ls -a
 # RUN cp ./ca.p12 /tmp/ca.p12
-RUN ls /tmp
+# RUN ls /tmp
 RUN ./gradlew build -Dquarkus.package.type=native
 
 
@@ -30,8 +33,9 @@ RUN chown 1001 /work \
     && chmod "g+rwX" /work \
     && chown 1001:root /work
 COPY --from=build --chown=1001:root build/*-runner /work/application
-COPY --from=build --chown=1001:root /tmp/ca.p12 /tmp/ca.p12
-COPY --from=build --chown=1001:root /tmp/user.p12 /tmp/user.p12
+# COPY --from=build --chown=1001:root /code/ca.p12 /tmp/ca.p12
+# COPY --from=build --chown=1001:root /tmp/ca.p12 /tmp/ca.p12
+# COPY --from=build --chown=1001:root /tmp/user.p12 /tmp/user.p12
 
 EXPOSE 8080
 USER 1001
