--- a/rsbc-ride-producer-api/Dockerfile.native.multistage
+++ b/rsbc-ride-producer-api/Dockerfile.native.multistage
@@ -1,7 +1,7 @@
 ## Stage 1 : build with maven builder image with native capabilities
 FROM image-registry.openshift-image-registry.svc:5000/be5301-tools/quarkus-builder-image:1.0 AS build
 USER root
-# RUN microdnf install findutils
+RUN microdnf install findutils
 COPY --chown=quarkus:quarkus ./gradlew /code/gradlew
 COPY --chown=quarkus:quarkus ./gradle /code/gradle
 COPY --chown=quarkus:quarkus ./build.gradle /code/
