--- a/rsbc-ride-producer-api/build.gradle
+++ b/rsbc-ride-producer-api/build.gradle
@@ -21,8 +21,8 @@ dependencies {
     implementation 'io.quarkus:quarkus-avro'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'io.apicurio:apicurio-registry-utils-serde:1.3.2.Final'
-    
-    implementation group: 'io.quarkus', name: 'quarkus-vertx-http', version: '2.14.1.Final'
+
+    // implementation group: 'io.quarkus', name: 'quarkus-vertx-http', version: '2.14.1.Final'
 
 
     // implementation 'io.quarkus:quarkus-kubernetes:2.14.0.Final'
