--- a/rsbc-ride-producer-api/Dockerfile.native.multistage
+++ b/rsbc-ride-producer-api/Dockerfile.native.multistage
@@ -19,19 +19,20 @@ COPY ./src /code/src
 # COPY /tmp/user.p12 /tmp/user.p12
 # RUN ls /code/src
 RUN ls /code
-# RUN ls -a
+RUN ls -a
 # RUN cp ./ca.p12 /tmp/ca.p12
 # RUN ls /tmp
 RUN ./gradlew build
+RUN ls -a
 # RUN ./gradlew build -Dquarkus.package.type=native
 
 FROM image-registry.openshift-image-registry.svc:5000/be5301-tools/quarkus-ubi-base-image:1.1
 ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en'
 # We make four distinct layers so if there are application changes the library layers can be re-used
-COPY --from=build --chown=185 build/quarkus-app/lib/ /deployments/lib/
-COPY --chown=185 build/quarkus-app/*.jar /deployments/
-COPY --chown=185 build/quarkus-app/app/ /deployments/app/
-COPY --chown=185 build/quarkus-app/quarkus/ /deployments/quarkus/
+COPY --from=build --chown=185 /code/build/quarkus-app/lib/ /deployments/lib/
+COPY --from=build --chown=185 /code/build/quarkus-app/*.jar /deployments/
+COPY --from=build --chown=185 /code/build/quarkus-app/app/ /deployments/app/
+COPY --from=build --chown=185 /code/build/quarkus-app/quarkus/ /deployments/quarkus/
 
 EXPOSE 8080
 USER 185
