--- a/rsbc-ride-producer-api/Dockerfile.native.multistage
+++ b/rsbc-ride-producer-api/Dockerfile.native.multistage
@@ -33,6 +33,8 @@ COPY --from=build --chown=185 /code/build/quarkus-app/lib/ /deployments/lib/
 COPY --from=build --chown=185 /code/build/quarkus-app/*.jar /deployments/
 COPY --from=build --chown=185 /code/build/quarkus-app/app/ /deployments/app/
 COPY --from=build --chown=185 /code/build/quarkus-app/quarkus/ /deployments/quarkus/
+RUN mkdir /code
+COPY --from=build --chown=1001:root /code/ca.p12 /code/ca.p12
 
 EXPOSE 8080
 USER 185
