--- a/rsbc-ride-producer-api/Dockerfile.native.multistage
+++ b/rsbc-ride-producer-api/Dockerfile.native.multistage
@@ -9,6 +9,7 @@ COPY --chown=quarkus:quarkus ./settings.gradle /code/
 COPY --chown=quarkus:quarkus ./gradle.properties /code/
 COPY --chown=quarkus:quarkus ./gradle.properties /code/
 COPY --chown=quarkus:quarkus /tmp/ca.p12 /code/
+# COPY --chown=quarkus:quarkus /tmp/ca.p12 /tmp/
 RUN chmod +x /code/gradlew
 USER quarkus
 # RUN mkdir /code
@@ -33,8 +34,9 @@ COPY --from=build --chown=185 /code/build/quarkus-app/lib/ /deployments/lib/
 COPY --from=build --chown=185 /code/build/quarkus-app/*.jar /deployments/
 COPY --from=build --chown=185 /code/build/quarkus-app/app/ /deployments/app/
 COPY --from=build --chown=185 /code/build/quarkus-app/quarkus/ /deployments/quarkus/
+USER root
 RUN mkdir /code
-COPY --from=build --chown=1001:root /code/ca.p12 /code/ca.p12
+COPY --from=build --chown=185 /code/ca.p12 /code/ca.p12
 
 EXPOSE 8080
 USER 185
