--- a/rsbc-ride-producer-api/Dockerfile.native.multistage
+++ b/rsbc-ride-producer-api/Dockerfile.native.multistage
@@ -9,10 +9,11 @@ COPY --chown=quarkus:quarkus ./settings.gradle /code/
 COPY --chown=quarkus:quarkus ./gradle.properties /code/
 COPY --chown=quarkus:quarkus ./gradle.properties /code/
 # COPY --chown=quarkus:quarkus /tmp/ca.p12 /code/
-COPY --chown=quarkus:quarkus /tmp/ca.p12 /tmp/
+# COPY --chown=quarkus:quarkus /tmp/ca.p12 /tmp/
 RUN chmod +x /code/gradlew
 USER quarkus
-# RUN mkdir /code
+RUN mkdir /deployments
+COPY --chown=quarkus:quarkus /tmp/ca.p12 /deployments/
 # RUN ls -a
 WORKDIR /code
 COPY ./src /code/src
@@ -22,7 +23,7 @@ COPY ./src /code/src
 RUN ls /code
 RUN ls -a
 # RUN cp ./ca.p12 /tmp/ca.p12
-RUN ls /tmp
+RUN ls /deployments
 RUN ./gradlew build
 RUN ls -a
 # RUN ./gradlew build -Dquarkus.package.type=native
@@ -34,7 +35,7 @@ COPY --from=build --chown=185 /code/build/quarkus-app/lib/ /deployments/lib/
 COPY --from=build --chown=185 /code/build/quarkus-app/*.jar /deployments/
 COPY --from=build --chown=185 /code/build/quarkus-app/app/ /deployments/app/
 COPY --from=build --chown=185 /code/build/quarkus-app/quarkus/ /deployments/quarkus/
-COPY --from=build --chown=185 /tmp/ca.p12 /tmp/ca.p12
+COPY --from=build --chown=185 /deployments/ca.p12 /deployments/ca.p12
 # USER root
 # RUN mkdir /code
 # COPY --from=build --chown=185 /code/ca.p12 /code/ca.p12
